--- a/PragueParking.Console/configuration.json
+++ b/PragueParking.Console/configuration.json
@@ -1,4 +1,7 @@
 {
-  "GarageSize": 100
-}
+  "GarageSize": 100,
+  "AllowedVehicles": [ "MC", "CAR" ],
+  "MCVechicleSize": 2,
+  "CarVehicleSize": 4
 
+}
